cpp/kurczak/error_log.txt
main.cpp:12:19: warning: multi-character character constant [-Wmultichar]
   12 | float rrr=eee*fff*'pi';
      |                   ^~~~
main.cpp:15:1: error: expected unqualified-id before ‘return’
   15 | return 0;
      | ^~~~~~
